--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,7 @@
 {
     "manifest_version": 2,
-    "name": "PUNter",
+    "name": "PunTer",
+    "short_name":"PunTer",
     "description": "Gets the most exciting computer puns on every new tab.",
     "version": "1",
     "author": "Nilansh Bansal",
@@ -13,6 +14,7 @@
         "16":"icon-lol-16.png",
         "32":"icon-lol-32.png",
         "48":"icon-lol-48.png",
+        "96":"icon-lol-96.png",
         "128":"icon-lol-128.png"
     },
     "chrome_url_overrides": {
