--- a/manifest.json
+++ b/manifest.json
@@ -7,8 +7,7 @@
     "author": "Nilansh Bansal",
     "browser_action": {
         "default_icon": "tab-icon.png",
-        "default_title": "Have a punny day!",
-        "default_popup": "popup.html"
+        "default_title": "Have a punny day!"
     },
     "icons":{
         "16":"icon-lol-16.png",
